[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset-viewer"
version = "1.0.2"
authors = [
  { name="Hillpro", email="66534835+Hillpro@users.noreply.github.com" },
]
description = "Allow to view a dataset image by image and edit their labels"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["napari", "dataset", "segmentation", "labels", "viewer", "annotation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "napari",
  "numpy",
  "Pillow",
]

[project.optional-dependencies]
gui = ["PyQt5"]

[project.urls]
"Homepage" = "https://github.com/Hillpro/dataset-viewer"
"Bug Tracker" = "https://github.com/Hillpro/dataset-viewer/issues"